// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`---> Testing /Components/Favourites should render correctly when there are NO favourite movies 1`] = `
<section
  className="wrapper"
>
  <h1>
    My Favourites
  </h1>
  <div
    className="empty"
  >
    You don't have any favourites yet. Go and browse like a browser.
  </div>
</section>
`;

exports[`---> Testing /Components/Favourites should render correctly when there are no favourite movies 1`] = `
<section
  className="wrapper"
>
  <h1>
    My Favourites
  </h1>
  <div
    className="nonEmpty"
  >
    <div>
      <a
        className="link"
        href="/details/a"
        onClick={[Function]}
      >
        <img
          alt="poster"
          className="slide"
          src="b"
        />
        <h4>
          c
        </h4>
        <h5>
          d, e
        </h5>
      </a>
    </div>
  </div>
</section>
`;
